<resources>

    <string name="app_name">GameTrick</string>
    
    <string name="main_title_name" >方案</string>
    <string name="scheme_custom_name">自定义方案</string>
    
    
    <!-- common -->
    <string name="save">保存</string>
    <string name="cancel">取消</string>
   
    <!-- 基本牌 -->
    <string name="base_card">基本牌</string>
    <string name="sha">杀</string>
     <string name="shaamount">44</string>
     
    <string name="shan">闪</string>
     <string name="shanamount">24</string>
     
    <string name="tao">桃</string>
    <string name="taoamount">12</string>
    
    <string name="jiu">酒</string> 
    <string name="jiuamount">5</string>

    
    <!-- 锦囊牌 -->
    <string name="stratagem_card">锦囊牌</string>
	<!-- 非延时锦囊 -->
    <string name="wuzhong">无中</string>
    <string name="wuzhongamount">4</string>
    
    <string name="shunshou">顺手</string>
    <string name="shunshouamount">5</string>
    
    <string name="guochai">过拆</string>
    <string name="guochaiamount">6</string>
    
    <string name="juedou">决斗</string>
    <string name="juedouamount">3</string>
    
    <string name="huogong">火攻</string>
    <string name="huogongamount">3</string>
    
    <string name="jiedao">借刀</string>
    <string name="jiedaoamount">2</string>
    
    <string name="tiesuo">铁索</string>
    <string name="tiesuoamount">6</string>
    
    <string name="wuxie">无懈</string>
    <string name="wuxieamount">7</string>
         
    <!--  AOE锦囊 -->
    <string name="taoyuan">桃园</string>
    <string name="taoyuanamount">1</string>
    
    <string name="wugu">五谷</string> 
    <string name="wuguamount">2</string> 
    
    <string name="wanjian">万剑</string>
    <string name="wanjianamount">1</string>
    
    <string name="nanman">南蛮</string> 
    <string name="nanmanamount">3</string> 
    
    
    <!-- 非延时锦囊 -->
    <string name="shenle">神乐</string>
    <string name="shenleamount">3</string>
    
    <string name="bingliang">兵粮</string>
    <string name="bingliangamount">2</string>
    
    <string name="shandian">闪电</string>
    <string name="shandianamount">2</string>  

    
	<!-- 装备 -->
	<string name="equipment_card">装备牌</string>
    <string name="wuqi">武器</string>
     <string name="wuqiamount">12</string>
     
    <string name="fangju">防具</string>
    <string name="fangjuamount">6</string>
    
    <string name="fsma">防守马</string>
    <string name="fsmaamount">4</string>
    
    <string name="jgma">进攻马</string>
    <string name="jgmaamount">3</string>
  
    
    
   
    <!-- splash screen -->
    <string name="splash_screen_design_msg">Design By GLS</string>
    <string name="splash_screen_design_time">2015.6.30</string>
    
   
    <!-- 自定义 -->
    <string name="custom_scheme">添加</string>
   
    
    
    
    
    
    
       <string name="app_back">返回</string>
    <string name="app_ok">确定</string>
    <string name="app_cancel">取消</string>
    <string name="app_continue">继续</string>
    <string name="app_tip">提示</string>
    <string name="app_send">发送</string>
    <string name="app_set">设置</string>
    <string name="app_save">保存</string>
    <string name="app_delete">删除</string>
    <string name="app_nextstep">下一步</string>
    <string name="app_prevstep">上一步</string>
    <string name="app_finish">完成</string>
    <string name="app_find">查找</string>
    <string name="app_edit">编辑</string>

    <!-- applet -->
    <string name="applet_secimg_title">填写验证码</string>
    <string name="applet_secimg_change">换一张图片</string>
    <string name="applet_seccode_tip">验证码不能为空</string>
    <string name="applet_seccode_fail_tip">验证码错误，请重新输入</string>

    <!-- verify -->
    <string name="verify_password_null_tip">密码不能为空，请输入密码</string>

    <!-- format -->
    <string name="fmt_date">M月d日</string>
    <string name="fmt_longdate">yyyy年M月d日</string>
    <string name="fmt_datetime" formatted="false">M月d日 %skk:mm</string>
    <string name="fmt_patime">kk:mm</string>
    <string name="fmt_longtime" formatted="false">yyyy年M月d日 %skk:mm</string>
    <string name="fmt_in60min" formatted="false">%d分钟前</string>
    <string name="fmt_justnow">1分钟内</string>
    <string name="fmt_dawn">凌晨</string>
    <string name="fmt_morning">早上</string>
    <string name="fmt_noon">中午</string>
    <string name="fmt_afternoon">下午</string>
    <string name="fmt_evening">晚上</string>
    <string name="fmt_pre_yesterday">昨天</string>
    <string name="fmt_iap_err" formatted="false">网络连接不可用，请稍候重试</string>
    
    <string name="hello">Hello World, SDKSampleActivity!</string>
 
	<string name="app_share">分享</string>
    
    <string name="enter">这是SDK_Sample的入口界面</string>
    <string name="reg">将该app注册到微信</string>
    <string name="goto_send">跳转到发消息界面</string>
    <string name="launch_wx">启动微信</string>
    <string name="check_timeline_supported">检查是否支持发送到朋友圈</string>
    
    <string name="send_to_wx_title">发送到微信</string>
	<string name="get_from_wx_title">从微信接收</string>
	<string name="show_from_wx_title">显示微信请求的消息</string>

	<string name="errcode_success">发送成功</string>
	<string name="errcode_cancel">发送取消</string>
	<string name="errcode_deny">发送被拒绝</string>
	<string name="errcode_unknown">发送返回</string>
	
    <!-- WXMediaMessage -->
	<string name="send">发送到微信</string>
	<string name="receive">从微信接收</string>
	
	<string name="is_timeline">是否分享到朋友圈</string>
	<string name="send_text">发送文本</string>
	<string name="send_text_default">这段文字发送自微信SDK示例程序</string>
	
	<string name="send_img">发送图片</string>
	<string-array name="send_img_item">
        <item>发送图片的二进制数据</item>
        <item>发送图片的本地路径</item>
        <item>发送图片的URL</item>
    </string-array>
	<string name="send_img_file_not_exist">文件不存在</string>
	
	<string name="send_pic">发送照片</string>
	
	<string name="send_music">发送音乐</string>
	<string-array name="send_music_item">
	    <item>发送音乐url</item>
	    <item>发送低带宽音乐url</item>
	</string-array>

	<string name="send_video">发送视频</string>
	<string-array name="send_video_item">
	    <item>发送视频url</item>
	    <item>发送低带宽视频url</item>
	</string-array>
	
	<string name="send_webpage">发送网页</string>
	<string-array name="send_webpage_item">
	    <item>发送网页url</item>
	</string-array>

	<string name="send_appdata">发送app消息</string>
	<string-array name="send_appdata_item">
	    <item>发送app文件本地路径</item>
	    <item>发送app二进制数据</item>
	    <item>发送无附件的app</item>
	</string-array>
	
	<string name="send_emoji">发送表情消息</string>
	<string-array name="send_emoji_item">
	    <item>发送表情本地路径</item>
	    <item>发送表情二进制数据</item>
	</string-array>
	
	<string-array name="send_emoji_item_format">
	    <item>发送GIF图片</item>
	    <item>发送非GIF图片</item>
	</string-array>
	
    <string name="share_text_to_weixin">回应文本到微信</string>
    <string name="share_text_default">这段文字回应自微信SDK示例程序</string>
    <string name="share_url_to_weixin">回应URL到微信</string>
    <string name="share_pic_to_weixin">回应图片到微信</string>
    <string name="share_music_to_weixin">回应音乐到微信</string>
    <string name="share_video_to_weixin">回应视频到微信</string>
    <string name="share_appdata_to_weixin">回应app消息到微信</string>
    
    <string name="register_as_weixin_app_sender">注册微信事件发送器</string>
    <string name="get_token_from_weixin">获取微信访问Token</string>
    <string name="unregister_from_weixin">从微信反注册</string>
    
    <string name="show_from_wx_tip">这个界面用于显示微信向第三方app请求显示的信息</string>
    
    
</resources>
